add some information at Audience section

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -23,7 +23,7 @@
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>I think the people who would visit this website would be the people who have an interest in experiencing rafting. Their ages should be between 16 to 55 and they like outdoor activities. They want to get more information(price, time, location...etc) and see more pictures to make sure rafting in our company is really fun. They would use mobile devices to visit my website.</p>
+    <p>I think the people who would visit this website would be the people who have an interest in experiencing rafting. Their ages should be between 16 to 55 and they like outdoor activities. Especially for student or business groups. They want to get more information(price, time, location...etc) and see more pictures to make sure rafting in our company is really fun. They would use mobile devices to visit my website.</p>
     <!-- change this -->
 
     <hr />
