--- a/wwr/index.html
+++ b/wwr/index.html
@@ -29,7 +29,7 @@
             </div>
         </section>
     </div>
-    <master class="home-grid">
+    <main class="home-grid">
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
@@ -51,7 +51,7 @@
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
             <a class='join' href="rivers.html">Join Us</a>
         </section>
-    </master>
+    </main>
     <footer>
         <p>Dry Oar &copy; 2024 - Cheng-En Sung</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
