--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -97,9 +97,7 @@
     <h3>Navigation</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-      </ul>
+      <a href="index.html">Home</a>
       <a href="#">Page2</a>
       <a href="#">Contact Us</a>
     </nav>
