fixed some wrong spellings

--- a/rel275c/creation.html
+++ b/rel275c/creation.html
@@ -75,7 +75,7 @@
               </video>
         </main>
         <footer>
-            <p>Tbe Church of Jesus Christ of Latter-day Saints &copy; 2024 - Cheng-En Sung</p>
+            <p>The Church of Jesus Christ of Latter-day Saints &copy; 2024 - Cheng-En Sung</p>
             <div class="social">
                 <a href="https://www.facebook.com/ChurchofJesusChrist" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
