--- a/rel275c/natural-man.html
+++ b/rel275c/natural-man.html
@@ -42,7 +42,7 @@
             </section>
         </main>
         <footer>
-            <p>Tbe Church of Jesus Christ of Latter-day Saints &copy; 2024 - Cheng-En Sung</p>
+            <p>The Church of Jesus Christ of Latter-day Saints &copy; 2024 - Cheng-En Sung</p>
             <div class="social">
                 <a href="https://www.facebook.com/ChurchofJesusChrist" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
