add shortcut icon

--- a/rel275c/index.html
+++ b/rel275c/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Creation, Fall of Adam and Eve, and the Natural Man</title>
+    <link rel="shortcut icon" href="images/OIP (1).png" />
     <link rel="stylesheet" href="styles/style-index.css">
 </head>
 <body>
