--- a/rel275c/creation.html
+++ b/rel275c/creation.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Creation</title>
+    <link rel="shortcut icon" href="images/OIP (1).png" />
     <link rel="stylesheet" href="styles/style-creation.css">
 </head>
 <body>
