fix the display on mobile device

--- a/rel275c/index.html
+++ b/rel275c/index.html
@@ -30,17 +30,17 @@
             </section>
         </div>
         <main class="home-grid">
-            <section class="creation-img">
+            <section class="creation">
                 <h2 class="h2">The Creation</h2>
-                <img class="card-img" src="images/fe496153820fa9bacd984a3ffba803fd12f9e453.webp" alt="The creation">
+                <img id="creation-img" src="images/fe496153820fa9bacd984a3ffba803fd12f9e453.webp" alt="The creation">
             </section>
             <section class="fall">
                 <h2 class="h2">Fall of Adam and Eve</h2>
                 <img id="fall-img" src="images/old_testament_stories_about_section_2.jpeg" alt="Fall of Adam and Eve">
             </section>
-            <section class="natural-man-img">
+            <section class="natural-man">
                 <h2 class="h2">The Natural Man</h2>
-                <img class="card-img" src="images/naturalman.jpg" alt="The Natural Man">
+                <img id="natural-man-img" src="images/naturalman.jpg" alt="The Natural Man">
             </section>
         </main>
         <footer>
