--- a/rel275c/creation.html
+++ b/rel275c/creation.html
@@ -41,12 +41,12 @@
             </section>
             <section class="fall">
                 <h2 class="h2">Period Two</h2>
-                <img id="fall-img" src="images/old_testament_stories_the_creation_of_the_earth_3.webp" alt="The Second Day of the Creation">
+                <img id="two-img" src="images/old_testament_stories_the_creation_of_the_earth_3.webp" alt="The Second Day of the Creation">
                 <h4>"And again, I, God, said: Let there be a firmament in the midst of the water, and it was so, even as I spake; and I said: Let it divide the waters from the waters; and it was done; And I, God, made the firmament and divided the waters, yea, the great waters under the firmament from the waters which were above the firmament, and it was so even as I spake. And I, God, called the firmament Heaven; and the evening and the morning were the second day. (Moses 2:6-8)"</h4>
             </section>
             <section class="natural-man-img">
                 <h2 class="h2">Period Three</h2>
-                <img class="card-img" src="images/old_testament_stories_the_creation_of_the_earth_4.webp" alt="The Third Day of the Creation">
+                <img class="three-img" src="images/old_testament_stories_the_creation_of_the_earth_4.webp" alt="The Third Day of the Creation">
                 <h4>"And I, God, said: Let the earth bring forth grass, the herb yielding seed, the fruit tree yielding fruit, after his kind, and the tree yielding fruit, whose seed should be in itself upon the earth, and it was so even as I spake." (Moses 2:11)</h4>
             </section>
             <section class="natural-man-img">
@@ -56,18 +56,18 @@
             </section>
             <section class="natural-man-img">
                 <h2 class="h2">Period Five</h2>
-                <img class="card-img" src="images/old_testament_stories_the_creation_of_the_earth_6.webp" alt="The Fifth Day of the Creation">
+                <img class="five-img" src="images/old_testament_stories_the_creation_of_the_earth_6.webp" alt="The Fifth Day of the Creation">
                 <h4>"And I, God, said: Let the waters bring forth abundantly the moving creature that hath life, and fowl which may fly above the earth in the open firmament of heaven. And I, God, created great whales, and every living creature that moveth, which the waters brought forth abundantly, after their kind, and every winged fowl after his kind; and I, God, saw that all things which I had created were good. (Moses 2:20-21)"</h4>
             </section>
             <section class="natural-man-img">
                 <h2 class="h2">Period Six</h2>
-                <img class="card-img" src="images/old_testament_stories_the_creation_of_the_earth_7.webp" alt="The Sixth Day of the Creation">
+                <img class="six-img" src="images/old_testament_stories_the_creation_of_the_earth_7.webp" alt="The Sixth Day of the Creation">
                 <img class="card-img" src="images/old_testament_stories_the_creation_of_the_earth_8.webp" alt="Adam and Eve were been created">
                 <h4>"And I, God, said: Let the earth bring forth the living creature after his kind, cattle, and creeping things, and beasts of the earth after their kind, and it was so; And I, God, made the beasts of the earth after their kind, and cattle after their kind, and everything which creepeth upon the earth after his kind; and I, God, saw that all these things were good. And I, God, said unto mine Only Begotten, which was with me from the beginning: Let us make man in our image, after our likeness; and it was so. And I, God, said: Let them have dominion over the fishes of the sea, and over the fowl of the air, and over the cattle, and over all the earth, and over every creeping thing that creepeth upon the earth. And I, God, created man in mine own image, in the image of mine Only Begotten created I him; male and female created I them. (Moses 2:24-27)"</h4>
             </section>
             <section class="natural-man-img">
                 <h2 class="h2">Period Seven</h2>
-                <img class="card-img" src="images/old_testament_stories_the_creation_of_the_earth_9.webp" alt="The Garden of Eden">
+                <img class="seven-img" src="images/old_testament_stories_the_creation_of_the_earth_9.webp" alt="The Garden of Eden">
                 <h4>"And on the seventh day I, God, ended my work, and all things which I had made; and I rested on the seventh day from all my work, and all things which I had made were finished, and I, God, saw that they were good; And I, God, blessed the seventh day, and sanctified it; because that in it I had rested from all my work which I, God, had created and made. (Moses 3:2-3)"</h4>
             </section>
             <video width="480" height="360" controls>
