--- a/rel275c/natural-man.html
+++ b/rel275c/natural-man.html
@@ -30,14 +30,14 @@
             </section>
         </div>
         <main class="home-grid">
-            <section class="adam-and-eve-img">
+            <section class="what-natural">
                 <h2 class="h2">What is the Natural Man?</h2>
                 <h4>"A person who choose to be influenced by the passions, desires, appetites, and senses of the flesh rather than by the promptings of the Holy Spirit." (Guide to the Scripture: Natural Man)</h4>
                 <h4 class="h4">"For the natural man is an enemy to God, and has been from the fall of Adam, and will be, forever and ever..." (Mosiah 3:19)</h4>
             </section>
-            <section class="adam-and-eve-img">
+            <section class="putting-off">
                 <h2 class="h2">How can we do "Putting Off the Natural Man"?</h2>
-                <img class="card-img" src="images/old_testament_stories_the_tower_of_babel_1.webp" alt="the towner of babel">
+                <img class="natural-man-img" src="images/old_testament_stories_the_tower_of_babel_1.webp" alt="the towner of babel">
                 <h4>"...unless he yields to the enticings of the Holy Spirit, and putteth off the natural man and becometh a saint through the atonement of Christ the Lord, and becometh as a child, submissive, meek, humble, patient, full of love, willing to submit to all things which the Lord seeth fit to inflict upon him, even as a child doth submit to his father." (Mosiah 3:19)</h4>
                 <h4 class="h4">Following Jesus Christ His teaching and example are always the ways to put off the natural man. For example, we can set a weekly goal that helps us focus on developing one of the Christlike attributes. During that week, we can pay attention to the scriptures that we read each day and see how we can apply them to our lives, in order to develop that Christlike attributes. Then, evaluate our effort at the end of the day and plan how we can do better at next day.</h4>
             </section>
