--- a/rel275c/index.html
+++ b/rel275c/index.html
@@ -11,11 +11,11 @@
     <div id="content">
         <header>
             <nav>
-                <a id="logo_link" href="index.html">
+                <a class="tag" href="index.html">
                     <img class="logo" src="images/OIP (1).png" alt="Temple Icon"></a>
-                <a href="creation.html">Creation</a>
-                <a href="fall-of-adam-and-eve.html">Fall of Adam and Eve</a>
-                <a href="natural-man.html">Natural Man</a>
+                <a class="tag" href="creation.html">Creation</a>
+                <a id="adam-and-eve-tag"href="fall-of-adam-and-eve.html">Fall of Adam and Eve</a>
+                <a class="tag" href="natural-man.html">Natural Man</a>
             </nav>
         </header>
         <div id="hero">
