test the tag bar of the index page

--- a/rel275c/index.html
+++ b/rel275c/index.html
@@ -14,7 +14,7 @@
                 <a class="tag" href="index.html">
                     <img class="logo" src="images/OIP (1).png" alt="Temple Icon"></a>
                 <a class="tag" href="creation.html">Creation</a>
-                <a id="adam-and-eve-tag"href="fall-of-adam-and-eve.html">Fall of Adam and Eve</a>
+                <a id="adam-and-eve-tag"href="fall-of-adam-and-eve.html">Fall of Adam</a>
                 <a class="tag" href="natural-man.html">Natural Man</a>
             </nav>
         </header>
