--- a/rel275c/natural-man.html
+++ b/rel275c/natural-man.html
@@ -38,7 +38,7 @@
             <section class="putting-off">
                 <h2 class="h2">How can we do "Putting Off the Natural Man"?</h2>
                 <img class="natural-man-img" src="images/old_testament_stories_the_tower_of_babel_1.webp" alt="the towner of babel">
-                <h4>"...unless he yields to the enticings of the Holy Spirit, and putteth off the natural man and becometh a saint through the atonement of Christ the Lord, and becometh as a child, submissive, meek, humble, patient, full of love, willing to submit to all things which the Lord seeth fit to inflict upon him, even as a child doth submit to his father." (Mosiah 3:19)</h4>
+                <h4 class="h4">"...unless he yields to the enticings of the Holy Spirit, and putteth off the natural man and becometh a saint through the atonement of Christ the Lord, and becometh as a child, submissive, meek, humble, patient, full of love, willing to submit to all things which the Lord seeth fit to inflict upon him, even as a child doth submit to his father." (Mosiah 3:19)</h4>
                 <h4 class="h4">Following Jesus Christ His teaching and example are always the ways to put off the natural man. For example, we can set a weekly goal that helps us focus on developing one of the Christlike attributes. During that week, we can pay attention to the scriptures that we read each day and see how we can apply them to our lives, in order to develop that Christlike attributes. Then, evaluate our effort at the end of the day and plan how we can do better at next day.</h4>
             </section>
         </main>
