Co-authored-by: Kepler <keplerridge@users.noreply.github.com> Co-authored-by: ImJustNate <ImJustNate@users.noreply.github.com> Co-authored-by: Hansen, Hyrum <han23044@byui.edu>

--- a/ice_challenge/ice_challenge.html
+++ b/ice_challenge/ice_challenge.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ice Challenge</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img id="main_img" src="images/random-pixels-big.png" alt="">
-    <h1>These are some fantastic colors please enjoy</h1>
-    <section class="image_bar"> 
-        <img id="desk" src="images/w05_ice_image_desk.jpg" alt="desk">
-        <img id="logo" src="images/w05_ice_image_graphic.png" alt="logo">
-        <img id="person" src="images/w05_ice_image_person.jpg" alt="person">
+    <section>
+        <img id="cherries" src="images/w06_cherries.png" alt="">
+        <h3>Cherries</h3>
     </section>
-    <p> 
-        W05 image
-    </p>
+    <h1>Tart & Sweet</h1>
 </body>
 </html>
