--- a/final-project/site-plan.html
+++ b/final-project/site-plan.html
@@ -132,16 +132,16 @@
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Rivers</h3>
       <p>
         [Written copy for the Page 2 here]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
+        <img src="" alt="image for page">
         <img src="#" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Contact Us</h3>
       <p>
         [Written copy for the Page 3 here]
       </p>
@@ -163,7 +163,7 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Rivers</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
