site-plan content created

--- a/final-project/site-plan.html
+++ b/final-project/site-plan.html
@@ -88,7 +88,10 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home<span></span></a>
-        <a href="#">Page2<span></span></a>
+        <a href="#">About<span></span></a>
+        <a href="#">Prices<span></span></a>
+        <a href="#">Portfolio<span></span></a>
+        <a href="#">Book Now<span></span></a>
         <a href="#">Contact Us<span></span></a>
       </nav>
       <hr>
@@ -123,32 +126,57 @@
       <h2>
         Content
       </h2>
-      <h3>Home page</h3>
+      <h3>Home</h3>
       <p>
-        [Written copy for the home page here]
+        Welcome to VisionCrafters Studio! Let's have some fun!
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/IMG_3657.jpg" alt="image for homepage">
+        <img src="images/12.png" alt="image for homepage">
+        <img src="images/7.png" alt="image for homepage">
 
       </ul>
-      <h3>Rivers</h3>
+      <h3>About</h3>
       <p>
-        [Written copy for the Page 2 here]
+        My name is Simon. I'm from Taiwan so I can speak English and Chinese. I am a good fit for you if you are looking for a photographer who can speak those two languages. Since I started learning photography, it has already been over 6 years now. I like to use my camera to record the views and things that I see, in other words, to use a camera to tell my stories to others. Then, let them see the world from my eyes. In addition, I have 2 years of experience helping people to get professional photos. There is a sentence that has always been my motto, “The more you shoot, the more you will know how to shoot.” Let's have some fun and let me record those unforgettable moments for you!!!
       </p>
-      <p>Images for the Page 2</p>
-        <img src="" alt="image for page">
-        <img src="#" alt="image for page">
-
+      <p>Images for the About Page</p>
+        <img src="images/697280B1-B77D-43B9-BEB9-8484A8C6AC8D.jpg" alt="image for page">
+        <img src="images/97121B3F-8643-4504-B5F2-95EB36672566.jpg" alt="image for page">
+        <img src="images/IMG_3854.jpg" alt="image for page">
+        <img src="images/429106596_709693414691588_4902203839240097515_n.jpg" alt="image for page">
+      </p>
       </ul>
-      <h3>Contact Us</h3>
+      <h3>Prices</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Here is the example of the prices table that might look like!!!
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
-
+      <p>Images for the Prices Page</p>
+        <img src="images/prices_table.png" alt="image for page3">
+      <h3>Portfolio</h3>
+      <p>
+        In this page, I plan to fill up my photos.
+        Below is fewer example photos.
+        I will fill up more photos in this page.
+      </p>
+      <p>Images for the Portfolio Page</p>
+        <img src="images/0ED5262A-8AA7-4EDE-964E-3C1C0D0F0B48_L0_001-7_10_2023, 3_30_07 PM.jpg" alt="image for page3">
+        <img src="images/6773FB3E-3B81-48EF-9420-B913D7B0B520_L0_001-1_25_2024, 10_48_17 PM.jpg" alt="image for page3">
+        <img src="images/Alan Sung’s Photography.png" alt="image for page3">
+        <img src="images/FA2DC552-EB20-4337-9748-CAFCA9838F0B_L0_001-7_10_2023, 3_35_28 PM.jpg" alt="image for page3">
+      <h3>Book Now</h3>
+      <p>
+        If it is posible, I will be showing the book table and allowing people to book or register in this page.
+      </p>
+      <p>The picture below is the example of booking time table might look like.</p>
+        <img src="images/c4a6ac90-15b1-49e5-9c0e-0b28b3856abe.png" alt="image for page3">
+      <h3>Contact</h3>
+      <p>
+        CONTACT ME: 
+        Contact me through Instagram and Email for more details or through the Contact Form below.
+      </p>
+      <p>The picture below is the example of the contact form might look like.</p>
+        <img src="images/contact form.png" alt="image for page3">
       </ul>
       <hr>
       <h2>
@@ -163,17 +191,35 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>Rivers</h3>
+      <h3>About</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="#" alt="About page wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Prices</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="#" alt="Prices page wireframe">
+
+      <h3>Portfolio</h3>
+      <p>         
+        [Any additional details about page 3 that the wireframe does not make clear]
+      </p>
+      <img src="#" alt="Portfolio wireframe">
+
+      <h3>Book Now</h3>
+      <p>         
+        [Any additional details about page 3 that the wireframe does not make clear]
+      </p>
+      <img src="#" alt="Booking page  wireframe">
+
+      <h3>Contact</h3>
+      <p>         
+        [Any additional details about page 3 that the wireframe does not make clear]
+      </p>
+      <img src="#" alt="Contact page wireframe">
     </main>
   </body>
 
