completed site-plan

--- a/final-project/site-plan.html
+++ b/final-project/site-plan.html
@@ -187,39 +187,39 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        The image of the header bar will be the logo that I designed. The second section will be some creating concepts about VisionCrafters Studio. The pictures in the "What are we offer?" section will according to the different picture styles or the different categories of pictures.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Homepage.png" alt="home page wireframe">
 
       <h3>About</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        Short introduction about me and the why they need to choose VisionCrafters Studio. 
       </p>
-      <img src="#" alt="About page wireframe">
+      <img src="images/Aboutpage.png" alt="About page wireframe">
 
       <h3>Prices</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        The image here will be the Prices Table image. That will have different plans for the customers.
       </p>
-      <img src="#" alt="Prices page wireframe">
+      <img src="images/Pricespage.png" alt="Prices page wireframe">
 
       <h3>Portfolio</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="Portfolio wireframe">
+      <img src="images/Portfoliopage.png" alt="Portfolio wireframe">
 
       <h3>Book Now</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        This will be the booking time table to allow people to make an appointment.
       </p>
-      <img src="#" alt="Booking page  wireframe">
+      <img src="images/Bookingpage.png" alt="Booking page  wireframe">
 
       <h3>Contact</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        This is contact form and the link icon to my email address or Instagram...etc.
       </p>
-      <img src="#" alt="Contact page wireframe">
+      <img src="images/Contactpage.png" alt="Contact page wireframe">
     </main>
   </body>
 
