created header and footer for index page

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VisionCrafters Studio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="shortcut icon" href="images/white logo.png">
     <link rel="stylesheet" href="styles/index.css">
-    
 </head>
 <body>
     <div>
@@ -37,17 +37,21 @@
             </section>
         </main>
         <footer>
-            <p>Dry Oar &copy; 2024 - Cheng-En Sung</p>
+            <p>VisionCrafters Studio &copy; 2024 - Cheng-En Sung</p>
+            <p><a href="aboutus.html" target="_blank">About Us</a></p>
+            <p><a href="portfilio.html" target="_blank"></a>Portfolio</p>
+            <p><a href="booknow.html" target="_blank"></a>Book Now</p>
             <p><a href="contactus.html" target="_blank">Contact Us</a></p>
+            
             <div class="social">
-                <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
-                </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
+                <a href="mailto:chengensung1219@gmail.com" target="_blank">
+                    <i class="fa-solid fa-at"></i>
                 </a>
                 <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/chengensung1219/" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
                 </a>
             </div>
         </footer>
