created sub page and all of the content in the wireframe is included.

--- a/final-project/aboutus.html
+++ b/final-project/aboutus.html
@@ -6,7 +6,7 @@
     <title>VisionCrafters Studio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="shortcut icon" href="images/white logo.png">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/aboutus.css">
 </head>
 <body>
     <div>
@@ -24,22 +24,14 @@
         </header>
         <main>
             <section>
-                <img class="cover_img" src="images/IMG_3657-1.jpg" alt="wedding">
-                <h1>Want to get professional photos?</h1>
-                <p>Here is the right place to reach up.</p>
-                <div>
-                    <a href="">See more</a>
-                </div>
+                <img src="images/97121B3F-8643-4504-B5F2-95EB36672566.jpg" alt="">
+                <img src="images/697280B1-B77D-43B9-BEB9-8484A8C6AC8D.jpg" alt="">
+                <h1>Who am I?</h1>
+                <img src="images/429106596_709693414691588_4902203839240097515_n.jpg" alt="">
+                <img src="images/IMG_3854.jpg" alt="">
+                <h3>My name is Simon. I'm from Taiwan so I can speak English and Chinese. I am a good fit for you if you are looking for a photographer who can speak those two languages. Since I started learning photography, it has already been over 6 years now. I like to use my camera to record the views and things that I see, in other words, to use a camera to tell my stories to others. Then, let them see the world from my eyes. In addition, I have 2 years of experience helping people to get professional photos. There is a sentence that has always been my motto, “The more you shoo</h3>
             </section>
-            <section>
-                <h2>Where're we at?</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7845.077006813371!2d-111.7953537144862!3d43.8185982649184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53540b03dc48a5cf%3A0x1e5534d3c38ef412!2z5oSb6YGU6I235bee5qWK55m-57-w5aSn5a24!5e0!3m2!1szh-TW!2sus!4v1709183566765!5m2!1szh-TW!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </section>
-            <section>
-                <img src="" alt="">
-                <a href="aboutus.html" target="_blank">About Us</a>
-            </section>
-        </main>
+            <a href="portfolio.html">Portfolio</a>
         <footer>
             <p>VisionCrafters Studio &copy; 2024 - Cheng-En Sung</p>
             <p><a href="aboutus.html" target="_blank">About Us</a></p>
