--- a/final-project/portfolio.html
+++ b/final-project/portfolio.html
@@ -6,7 +6,7 @@
     <title>VisionCrafters Studio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="shortcut icon" href="images/white logo.png">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
     <div>
@@ -23,22 +23,7 @@
             </nav>
         </header>
         <main>
-            <section>
-                <img class="cover_img" src="images/IMG_3657-1.jpg" alt="wedding">
-                <h1>Want to get professional photos?</h1>
-                <p>Here is the right place to reach up.</p>
-                <div>
-                    <a href="">See more</a>
-                </div>
-            </section>
-            <section>
-                <h2>Where're we at?</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7845.077006813371!2d-111.7953537144862!3d43.8185982649184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53540b03dc48a5cf%3A0x1e5534d3c38ef412!2z5oSb6YGU6I235bee5qWK55m-57-w5aSn5a24!5e0!3m2!1szh-TW!2sus!4v1709183566765!5m2!1szh-TW!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </section>
-            <section>
-                <img src="" alt="">
-                <a href="aboutus.html" target="_blank">About Us</a>
-            </section>
+            <section></section>
         </main>
         <footer>
             <p>VisionCrafters Studio &copy; 2024 - Cheng-En Sung</p>
