upload some picture on index page

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -39,6 +39,18 @@
                 <img src="" alt="">
                 <a href="aboutus.html" target="_blank">About Us</a>
             </section>
+            <section>
+                <img src="images/Black Beige Minimalist  Photography Portfolio Cover Page.png" alt="">
+            </section>
+            <section>
+                <img src="" alt="">
+            </section>
+            <section>
+                <img src="" alt="">
+            </section>
+            <section>
+                <img src="" alt="">
+            </section>
         </main>
         <footer>
             <p>VisionCrafters Studio &copy; 2024 - Cheng-En Sung</p>
