basic home page created

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -23,34 +23,43 @@
             </nav>
         </header>
         <main>
-            <section>
-                <img class="cover_img" src="images/IMG_3657-1.jpg" alt="wedding">
-                <h1>Want to get professional photos?</h1>
+            <img class="cover_img" src="images/IMG_3657-1.jpg" alt="">
+            <section class="top-section">
+                <h1>Wants to get professional photos?</h1>
                 <p>Here is the right place to reach up.</p>
                 <div>
-                    <a href="">See more</a>
+                    <a id="see-more" href="">See More</a>
+                </div>
+            </section>
+            <section>
+                <div id="purpose">
+                    <img src="images/black logo with name.png" alt="">
+                    <h2>Our purpose</h2>
+                    <p>We aim to help capture and preserve memories for various occasions, including graduations, weddings, engagements, family milestones, anniversaries, and special celebrations. From documenting academic achievements to immortalizing love stories, these professionals ensure every moment is beautifully captured. Whether it's individual portraits, group photos, or candid shots, their expertise creates lasting mementos for clients to cherish.</p>
+                </div>
+                <div>
+                    <a id="about-us" href="aboutus.html">About Us</a>
                 </div>
             </section>
             <section>
                 <h2>Where're we at?</h2>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7845.077006813371!2d-111.7953537144862!3d43.8185982649184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53540b03dc48a5cf%3A0x1e5534d3c38ef412!2z5oSb6YGU6I235bee5qWK55m-57-w5aSn5a24!5e0!3m2!1szh-TW!2sus!4v1709183566765!5m2!1szh-TW!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
-            <section>
-                <img src="" alt="">
-                <a href="aboutus.html" target="_blank">About Us</a>
-            </section>
-            <section>
-                <img src="images/Black Beige Minimalist  Photography Portfolio Cover Page.png" alt="">
-            </section>
-            <section>
-                <img src="" alt="">
-            </section>
-            <section>
-                <img src="" alt="">
-            </section>
-            <section>
-                <img src="" alt="">
-            </section>
+            <h2>What are we offer?</h2>
+            <main class="small-main">
+                <section class="section1">
+                    <img class="offer-photos" src="images/Black Beige Minimalist  Photography Portfolio Cover Page.png" alt="">
+                </section>
+                <section class="section2">
+                    <img class="offer-photos" src="images/wedding photos.png" alt="">
+                </section>
+                <section class="section3">
+                    <img class="offer-photos" src="images/7.png" alt="">
+                </section>
+                <section class="section4">
+                    <img class="offer-photos" src="images/12.png" alt="">
+                </section>
+            </main>
         </main>
         <footer>
             <p>VisionCrafters Studio &copy; 2024 - Cheng-En Sung</p>
