fixed the hover for nav bar

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -5,28 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VisionCrafters Studio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="shortcut icon" href="images/white logo.png">
+    <link rel="shortcut icon" href="images/black logo.png">
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <div>
         <header>
-            <nav>
-                <a class="tag" href="index.html">Home</a>
-                <a class="tag" href="aboutus.html">About</a>
-                <a class="tag" href="prices.html">Prices</a>
-                <a href="index.html">
-                    <img class="logo" src="images/white logo with name.png" alt="VisionCrafters Studio"></a>
-                <a class="tag" href="portfolio.html">Portfolio</a>
-                <a class="tag" href="booknow.html">Book Now</a>
-                <a class="tag" href="contact.html">Contact</a>
+            <nav class="left-nav">
+                <a class="tag1" href="index.html">Home</a>
+                <a class="tag2" href="aboutus.html">About</a>
+                <a class="tag3" href="prices.html">Prices</a>
+            </nav>
+            <img class="logo" src="images/white logo with name.png" alt="VisionCrafters Studio">
+            <nav class="right-nav">
+                <a class="tag4" href="portfolio.html">Portfolio</a>
+                <a class="tag5" href="booknow.html">Book Now</a>
+                <a class="tag6" href="contact.html">Contact</a>
             </nav>
         </header>
         <main>
             <div id="top-div">
                 <img class="cover_img" src="images/IMG_3657-1.jpg" alt="">
                 <section class="top-section">
-                    <h1 class="home-title">Do you want to get professional photos?</h1>
+                    <h1 class="home-title">Wants to get professional photos?</h1>
                     <p>Here is the right place to reach up.</p>
                     <div>
                         <a id="see-more" href="">See More</a>
