--- a/final-project/aboutus.html
+++ b/final-project/aboutus.html
@@ -11,15 +11,16 @@
 <body>
     <div>
         <header>
-            <nav>
-                <a class="tag" href="index.html">Home<span></span></a>
-                <a class="tag" href="aboutus.html">About<span></span></a>
-                <a class="tag" href="prices.html">Prices<span></span></a>
-                <a href="index.html">
-                    <img class="logo" src="images/white logo with name.png" alt="VisionCrafters Studio"></a>
-                <a class="tag" href="portfolio.html">Portfolio<span></span></a>
-                <a class="tag" href="booknow.html">Book Now<span></span></a>
-                <a class="tag" href="contact.html">Contact<span></span></a>
+            <nav class="left-nav">
+                <a class="tag1" href="index.html">Home</a>
+                <a class="tag2" href="aboutus.html">About</a>
+                <a class="tag3" href="prices.html">Prices</a>
+            </nav>
+            <img class="logo" src="images/white logo with name.png" alt="VisionCrafters Studio">
+            <nav class="right-nav">
+                <a class="tag4" href="portfolio.html">Portfolio</a>
+                <a class="tag5" href="booknow.html">Book Now</a>
+                <a class="tag6" href="contact.html">Contact</a>
             </nav>
         </header>
         <main>
