--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -11,74 +11,51 @@
 <body>
     <div>
         <header>
-            <nav>
-                <a class="tag" href="index.html">Home<span></span></a>
-                <a class="tag" href="aboutus.html">About<span></span></a>
-                <a class="tag" href="prices.html">Prices<span></span></a>
-                <a href="index.html">
-                    <img class="logo" src="images/white logo with name.png" alt="VisionCrafters Studio"></a>
-                <a class="tag" href="portfolio.html">Portfolio<span></span></a>
-                <a class="tag" href="booknow.html">Book Now<span></span></a>
-                <a class="tag" href="contact.html">Contact<span></span></a>
+            <nav class="left-nav">
+                <a class="tag1" href="index.html">Home</a>
+                <a class="tag2" href="aboutus.html">About</a>
+                <a class="tag3" href="prices.html">Prices</a>
+            </nav>
+            <img class="logo" src="images/white logo with name.png" alt="VisionCrafters Studio">
+            <nav class="right-nav">
+                <a class="tag4" href="portfolio.html">Portfolio</a>
+                <a class="tag5" href="booknow.html">Book Now</a>
+                <a class="tag6" href="contact.html">Contact</a>
             </nav>
         </header>
         <main>
-            <img src="images/DSC08485.jpg" alt="">
-            <section>
-                <h1>CONTACT ME:</h1>
-                <p>Contact me through Instagram and Email for more details or through the Contact Form below.</p>
-            </section>
-            <div id="feedback"></div>
-            <form action="/my-handling-form-page" method="post">
-                <ul>
-                    <li>
-                        <label for="first-name">First Name:</label>
-                        <input type="text" id="first_name" name="user_first_name" />
-                    </li>
-                    <li>
-                        <label for="last-name">Last Name:</label>
-                        <input type="text" id="last_name" name="user_last_name" />
-                    </li>
-                    <li>
-                        <label for="mail">Email:</label>
-                        <input type="email" id="mail" name="user_email" />
-                    </li>
-                    <li>
-                        <label for="sub">Subject:</label>
-                        <input type="text" id="subject" name="subject" />
-                    </li>
-                    <li>
-                        <label for="msg">Message:</label>
-                        <textarea id="msg" name="user_message"></textarea>
-                    </li>
-                    <li class="button">
-                        <button type="submit">Send your message</button>
-                    </li>
-                </ul>
-            </form>
-            <script>
-                // get the feedback div element so we can do something with it.
-                const feedbackElement = document.getElementById('feedback');
-                // get the form so we can read what was entered in it.
-                const formElement = document.forms[0];
-                // add a 'listener' to wait for a submission of our form. When that happens run the code below.
-                formElement.addEventListener('submit', function(e) {
-                    // stop the form from doing the default action.
-                    e.preventDefault();
-                    // set the contents of our feedback element to a message letting the user know the form was submitted successfully. Notice that we pull the name that was entered in the form to personalize the message!
-                    feedbackElement.innerHTML = 'Hello '+ formElement.user_name.value +'! Thank you for your message. We will get back with you as soon as possible!';
-                    // make the feedback element visible.
-                    feedbackElement.style.display = "block";
-                    // add a class to move everything down so our message doesn't cover it.
-                    document.body.classList.toggle('moveDown');
-                });
-            </script>
+            <img class="cover_img" src="images/DSC08485-1.jpg" alt="">
+            <h3 class="title">CONTACT ME:</h3>
+            <p>Contact me through Instagram and Email for more details or through the Contact Form below.</p>
+            <div class="col-75">
+                <div class="container">
+                    <form action="/action_page.php">
+                        <div class="row">
+                            <div class="contact-form">
+                                <h3 class="form-title">Contact Form</h3>
+                                <div class="col-50">
+                                    <label for="fname" id="lbl-name"><i class="fa fa-user"></i> Full Name</label>
+                                    <input type="text" id="ent-fname" name="firstname" placeholder="Frist Nanme">
+                                    <input type="text" id="ent-lname" name="lastname" placeholder="Last Name">
+                                    <label for="email" id="lbl-email"><i class="fa fa-envelope"></i> Email</label>
+                                    <input type="text" id="ent-email" name="email" placeholder="simon@example.com">
+                                    <label for="sub" id="lbl-sub"><i class="fa-solid fa-camera"></i> Subject</label>
+                                    <input type="text" id="ent-sub" name="subject" placeholder="Subject">
+                                    <label for="message" id="lbl-msg"><i class="fa-solid fa-message"></i> Message</label>
+                                    <input type="text" id="ent-msg" name="message" placeholder="Message">
+                                </div>
+                                <input type="submit" value="Submit" class="btn">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </main>
         <footer>
             <p>VisionCrafters Studio &copy; 2024 - Cheng-En Sung</p>
             <p><a href="aboutus.html" target="_blank">About Us</a></p>
-            <p><a href="portfilio.html" target="_blank"></a>Portfolio</p>
-            <p><a href="booknow.html" target="_blank"></a>Book Now</p>
+            <p><a href="portfilio.html" target="_blank">Portfolio</a></p>
+            <p><a href="booknow.html" target="_blank">Book Now</a></p>
             <p><a href="contactus.html" target="_blank">Contact Us</a></p>
             
             <div class="social">
