--- a/final-project/index.html
+++ b/final-project/index.html
@@ -27,7 +27,7 @@
             <div id="top-div">
                 <img class="cover_img" src="images/IMG_3657-1.jpg" alt="">
                 <section class="top-section">
-                    <h1 class="home-title">Wants to get professional photos?</h1>
+                    <h1 class="home-title">Wanna to get professional photos?</h1>
                     <p>Here is the right place to reach up.</p>
                     <div>
                         <a id="see-more" href="">See More</a>
