--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -62,7 +62,7 @@
                 <a href="mailto:chengensung1219@gmail.com" target="_blank">
                     <i class="fa-solid fa-at"></i>
                 </a>
-                <a href="https://instagram.com" target="_blank">
+                <a href="https://www.instagram.com/__simonsung__/" target="_blank">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/chengensung1219/" target="_blank">
