scroll-behavior added

--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -25,7 +25,14 @@
         </header>
         <main>
             <img class="cover_img" src="images/DSC08485-1.jpg" alt="">
-            <h3 class="title">CONTACT ME:</h3>
+            <section class="top-section">
+                <h1 class="home-title">Contact us to get more inform.</h1>
+                <p>Click the button to fill out the form.</p>
+                <div>
+                    <a id="fill-out" href="#title">Fill Out</a>
+                </div>
+            </section>
+            <h3 id="title">CONTACT ME:</h3>
             <p>Contact me through Instagram and Email for more details or through the Contact Form below.</p>
             <div class="col-75">
                 <div class="container">
