porfolio page created

--- a/final-project/aboutus.html
+++ b/final-project/aboutus.html
@@ -24,20 +24,27 @@
             </nav>
         </header>
         <main>
+            <img class="cover_img" src="images/IMG_3854.jpg" alt="">
+            <section class="top-section">
+                <h1 class="home-title">Contact us to get more inform.</h1>
+                <p>Click the button to fill out the form.</p>
+                <div>
+                    <a id="fill-out" href="#title">Fill Out</a>
+                </div>
+            </section>
             <section>
                 <img src="images/97121B3F-8643-4504-B5F2-95EB36672566.jpg" alt="">
                 <img src="images/697280B1-B77D-43B9-BEB9-8484A8C6AC8D.jpg" alt="">
                 <h1>Who am I?</h1>
                 <img src="images/429106596_709693414691588_4902203839240097515_n.jpg" alt="">
-                <img src="images/IMG_3854.jpg" alt="">
                 <h3>My name is Simon. I'm from Taiwan so I can speak English and Chinese. I am a good fit for you if you are looking for a photographer who can speak those two languages. Since I started learning photography, it has already been over 6 years now. I like to use my camera to record the views and things that I see, in other words, to use a camera to tell my stories to others. Then, let them see the world from my eyes. In addition, I have 2 years of experience helping people to get professional photos. There is a sentence that has always been my motto, “The more you shoo</h3>
             </section>
             <a href="portfolio.html">Portfolio</a>
         <footer>
             <p>VisionCrafters Studio &copy; 2024 - Cheng-En Sung</p>
             <p><a href="aboutus.html" target="_blank">About Us</a></p>
-            <p><a href="portfilio.html" target="_blank"></a>Portfolio</p>
-            <p><a href="booknow.html" target="_blank"></a>Book Now</p>
+            <p><a href="portfilio.html" target="_blank">Portfolio</a></p>
+            <p><a href="booknow.html" target="_blank">Book Now</a></p>
             <p><a href="contactus.html" target="_blank">Contact Us</a></p>
             
             <div class="social">
