--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -33,7 +33,7 @@
                 </div>
             </section>
             <h3 id="title">CONTACT ME:</h3>
-            <p>Contact me through Instagram and Email for more details or through the Contact Form below.</p>
+            <p id="sub-title">Contact me through Instagram and Email for more details or through the Contact Form below.</p>
             <div class="col-75">
                 <div class="container">
                     <form action="/action_page.php">
