added cover image at profolio page

--- a/final-project/portfolio.html
+++ b/final-project/portfolio.html
@@ -24,6 +24,16 @@
             </nav>
         </header>
         <main>
+            <div id="top-div">
+                <img class="cover_img" src="porfolio-img/DSC00611.jpg" alt="">
+                <section class="top-section">
+                    <h1 class="home-title">Wanna to get professional photos?</h1>
+                    <p>Here is the right place to reach up.</p>
+                    <div>
+                        <a id="see-more" href="">See More</a>
+                    </div>
+                </section>
+            </div>
             <div class="header" id="myHeader">
                 <h1>Gallery</h1>
                 <p>Click on the buttons to change the grid view.</p>
