almost done for the about us page

--- a/final-project/portfolio.html
+++ b/final-project/portfolio.html
@@ -25,7 +25,7 @@
             <div id="top-div">
                 <img class="cover_img" src="porfolio-img/DSC00611.jpg" alt="">
                 <section class="top-section">
-                    <h1 class="home-title">What kind of portfolio do we have?</h1>
+                    <h1 class="home-title">What kind of portfolio do I have?</h1>
                     <p>Click on the buttons to see more photos.</p>
                     <div>
                         <a id="see-more" href="#gallery">See More</a>
@@ -69,7 +69,7 @@
                         <img src="porfolio-img/DSC00078.jpg" style="width:100%">
                         <img src="porfolio-img/DSC00084.jpg" style="width:100%">
                         <img src="porfolio-img/DSC00106.jpg" style="width:100%">
-                        <img src="porfolio-img/DSC00611.jpg" style="width:100%">
+                        <img src="porfolio-img/DSC00611 (2).jpg" style="width:100%">
                         <img src="porfolio-img/DSC00843.jpg" style="width:100%">
                         <img src="porfolio-img/DSC00888.jpg" style="width:100%">
                         <img src="porfolio-img/DSC01178.jpg" style="width:100%">
