--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -24,7 +24,7 @@
         <main>
             <img class="cover_img" src="images/DSC08485-1.jpg" alt="">
             <section class="top-section">
-                <h1 class="home-title">Contact us to get more inform.</h1>
+                <h1 class="home-title">Contact me to get more information.</h1>
                 <p>Click the button to fill out the form.</p>
                 <div>
                     <a id="fill-out" href="#title">Fill Out</a>
